--- a/module3/css/styles.css
+++ b/module3/css/styles.css
@@ -11,15 +11,15 @@ div section {
     padding: 10px;
 }
 #section-1{
-    background-color: #B3E5FF;
+    background-color: blueviolet;
 }
 
 #section-2 {
-    background-color: #FFC7B3;
+    background-color: lightyellow;
 }
 
 #section-3 {
-    background-color: #C3FF80;
+    background-color: lightcoral;
 }
 
 #text > h3 {
