--- a/order-summary-component/styles.css
+++ b/order-summary-component/styles.css
@@ -1,3 +1,115 @@
-body {
-	background-image: url("pattern-background-desktop.svg");
+* 
+{
+	box-sizing: border-box
 }
+
+body, html {
+  font-family: 'Red Hat Display', sans-serif;
+  height: 50%;
+  margin: 0;
+  background-image: url("./images/pattern-background-desktop.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover
+}
+.container {
+  position: relative;
+  width: 300px;
+  height: 450px;
+  background-color: white;
+  border-radius: 10px;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 5px 10px 18px rgb(214, 225, 255);
+  margin: auto;
+  text-align: center;
+}
+.img1 {
+  width: 100%;
+  height: 30%;
+  border-radius: 10px 10px 0px 0px;
+}
+.musicicon {
+  position: absolute;
+  left: 15px;
+  bottom: 20px;
+  height: 35px;
+}
+h1 {
+	font-size: 20px;
+	font-weight: bolder;
+  text-align: center;
+  color: hsl(223, 47%, 23%);
+}
+span {
+  color: hsl(224, 23%, 55%);
+}
+.text {
+  text-align: center;
+  font-size: 12px;
+  padding-left: 50px;
+  padding-right: 50px;
+  color: hsl(224, 23%, 55%);
+  font-weight: 500;
+}
+.sub {
+  position: relative;
+  width: 230px;
+  height: 70px;
+  background-color: hsl(225, 100%, 98%);
+  border-radius: 10px;
+  margin: auto;
+  padding: 25px;
+}
+.col {
+  position: absolute;
+  left: 70px;
+  bottom: 10px;
+  font-size: 12px;
+  font-weight: 500;
+}
+.under {
+  position: absolute;
+  font-size: 10px;
+  font-weight: 700;
+  color: hsl(245, 75%, 52%);
+  left: 180px;
+  bottom: 20px;
+  text-decoration: underline;
+}
+.under:active {color: #9999ff; text-decoration: none;}
+.button1 {
+  position: absolute;
+  border: 0;
+  width: 230px;
+  height: 40px;
+  background-color: hsl(245, 75%, 52%);
+  border-radius: 10px;
+  margin: auto;
+  color: white;
+  font-size: 10px;
+  font-weight: 700;
+  text-align: center;
+  right: 35px;
+  bottom: 70px;
+  box-shadow: 5px 10px 20px rgb(214, 225, 255);
+}
+.button1:active {
+  background-color: #9999ff;
+}
+.button2 {
+  position: absolute;
+  border: 0;
+  background-color: transparent;
+  font-size: 10px;
+  font-weight: 700;
+  color: gray;
+  bottom: 30px;
+  left: 105px;
+  top: 400px;
+}
+.button1:hover, .button2:hover, .under:hover {cursor: pointer;}
+.button2:active {color: rgb(51, 51, 51);}
