--- a/nft-preview-card-component/styles.css
+++ b/nft-preview-card-component/styles.css
@@ -11,7 +11,7 @@ body, html {
 	background-repeat: no-repeat;
 	background-size: cover
 }
-.container {
+main {
 	position: absolute;
   	width: 240px;
   	height: 410px;
@@ -22,17 +22,28 @@ body, html {
   	left: 0;
   	right: 0;
   	margin: auto;
-  	text-align: center;
-
+  	/*text-align: center;*/
+}
+img {
+	display: block;
+	
 }
 .showimage {
-	width: 100%;
-	padding: 15px 15px 0px 15px;
+	/*position: relative;*/
+	width: 85%;
+	height: 49.5%;
+	border-radius: 8px;
+	margin: 20px;
+	background-color: hsla(178, 100%, 50%, .55);
+    background-image: url("images/icon-view.svg");
+    background-repeat: no-repeat;
+    background-position: center;
 }
-.img1 {
-	width: 100%;
-	border-radius: 5px 5px 5px 5px;
+.showimage img {
+	max-width: 100%;
+	border-radius: 8px;
 }
+
 h1 {
 	position: relative;
 	color: hsl(0, 0%, 100%);
@@ -40,6 +51,10 @@ h1 {
 	font-weight: 600;
 	font-size: 15px;
 	text-align: left;
+}
+h1:hover, .att:hover{
+	cursor: pointer;
+	color: hsl(178, 100%, 50%);
 }
 .sub {
 	color: hsl(215, 51%, 70%);
@@ -99,4 +114,9 @@ span {
 	font-size: 11.5px;
 	font-weight: 300;
 	padding-left: 6px;
+}
+
+.img1:hover {
+	cursor: pointer;
+    opacity: 0.5;
 }
